--- a/src/tiled/preferencesdialog.ui
+++ b/src/tiled/preferencesdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
+    <width>423</width>
     <height>383</height>
    </rect>
   </property>
@@ -33,6 +33,13 @@
           <string>Saving and Loading</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
+          <item row="1" column="0" colspan="2">
+           <widget class="QCheckBox" name="reloadTilesetImages">
+            <property name="text">
+             <string>&amp;Reload tileset images when they change</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0" colspan="2">
            <widget class="QCheckBox" name="enableDtd">
             <property name="toolTip">
@@ -43,10 +50,10 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0" colspan="2">
-           <widget class="QCheckBox" name="reloadTilesetImages">
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="includeLayerGuid">
             <property name="text">
-             <string>&amp;Reload tileset images when they change</string>
+             <string>Include GUIDs for Layers and Objects</string>
             </property>
            </widget>
           </item>
@@ -59,23 +66,6 @@
           <string>Interface</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="5" column="0" colspan="4">
-           <widget class="QCheckBox" name="openGL">
-            <property name="text">
-             <string>Hardware &amp;accelerated drawing (OpenGL)</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>&amp;Language:</string>
-            </property>
-            <property name="buddy">
-             <cstring>languageCombo</cstring>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
@@ -112,6 +102,23 @@
             </property>
             <property name="buddy">
              <cstring>gridFine</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0" colspan="4">
+           <widget class="QCheckBox" name="openGL">
+            <property name="text">
+             <string>Hardware &amp;accelerated drawing (OpenGL)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>&amp;Language:</string>
+            </property>
+            <property name="buddy">
+             <cstring>languageCombo</cstring>
             </property>
            </widget>
           </item>
